# deepseek-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  config.rs  error.rs  lib.rs
src/models/: mod.rs  request.rs  response.rs
tests/: integration.rs
