[package]
name = "deepseek-rust"
version = "0.1.0"
edition = "2021"
authors = ["Abdulwahed <abdulwahed.sweden@gmail.com>"]
description = "A powerful async Rust client library for DeepSeek AI API"
documentation = "https://docs.rs/deepseek-rust"
homepage = "https://github.com/abdulwahed-sweden/deepseek-rust"
repository = "https://github.com/abdulwahed-sweden/deepseek-rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["deepseek", "ai", "api", "client", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]
exclude = [
    ".github/*",
    ".env",
    ".env.example",
    "examples/.env",
    "tests/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "deepseek_rust"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
# HTTP Client
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
] }

# Async Runtime
tokio = { version = "1.35", features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Environment Variables
dotenvy = "0.15"

# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Utilities
once_cell = "1.19"

# Async traits (if needed in future)
async-trait = { version = "0.1", optional = true }

# For streaming support (future feature)
futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }

[dev-dependencies]
# Testing
mockito = "1.2"
pretty_assertions = "1.4"
wiremock = "0.6"

# Async testing
tokio-test = "0.4"

# Environment for tests
temp-env = "0.3"

# Serialization for test fixtures
serde_yaml = "0.9"

[features]
default = ["logging"]
logging = ["tracing", "tracing-subscriber"]
streaming = ["futures", "tokio-stream", "bytes"]
full = ["logging", "streaming", "async-trait"]

# Development features
debug = ["logging"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

# Badge settings for docs.rs
[badges]
maintenance = { status = "actively-developed" }

# Workspace settings (if you plan to add more crates)
[workspace]
members = ["."]
resolver = "2"